Fix unusable Sage session after a syntax error

When we are thrown to the additional input prompt, simply report and error and send an interrupt signal to exit.

Do not try to guess what the problem is and fix it: this might be caused by an unmatched opening bracket or closing bracket, in which case we would be stuck in the additional input prompt forever

BUG: 429078